unitTesting - working on UserService