@@ -29,25 +29,17 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok:1.18.32'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
-	// Test dependencies
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'  // Includes JUnit 5, Spring Test, etc.
-	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
-	testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
-	testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.8.2'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test' // Includes JUnit 5
+	testImplementation 'org.mockito:mockito-core:5.11.0'                   // Core Mockito
+	testImplementation 'org.mockito:mockito-junit-jupiter:5.11.0'          // Mockito with JUnit 5
+
+	testImplementation 'org.projectlombok:lombok:1.18.32'
+	testAnnotationProcessor 'org.projectlombok:lombok:1.18.32'
+
 }
 
-springBoot {
-	mainClass = 'dotburgas.Application'  // Fully qualified name of your main class
-}
-
-bootJar {
-	archiveBaseName = 'dotburgas'  // Specify the name of your .jar file
-	version = '1.0.0'  // Optional: Specify the version
-}
 tasks.named('test') {
-	useJUnitPlatform()
+	useJUnitPlatform();
+	jvmArgs '-XX:+EnableDynamicAgentLoading'
 }
 
-test {
-	useJUnitPlatform() // Ensures JUnit 5 tests are recognized
-}
